force-app/main/default/objects/refedge__Contact_Attribute__c/fields/refedge__Contact__c.field-meta.xml
<CustomField>
    <fullName>refedge__Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Attributes</relationshipLabel>
    <relationshipName>Contact_Attributes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>