force-app/main/default/objects/refedge__Contact_Attribute__c/fields/refedge__From_Account__c.field-meta.xml
<CustomField>
    <fullName>refedge__From_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field would determine whether the record ws addes from the account or directly on the contact</description>
    <label>From Account</label>
    <type>Checkbox</type>
</CustomField>