force-app/main/default/objects/refedge__Contact_Attribute__c/fields/refedge__Reference_Basic_Information__c.field-meta.xml
<CustomField>
    <fullName>refedge__Reference_Basic_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Profile</label>
    <referenceTo>refedge__Reference_Basic_Information__c</referenceTo>
    <relationshipLabel>Contact Attributes</relationshipLabel>
    <relationshipName>Contact_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>